session2/configs/gateway/course-gateway-controller.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: course-frontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio
spec:
  hosts:
    - "*"
  gateways:
    - course-frontend-gateway
  http:
    - match:
        - uri:
            prefix: /frontend-catalog/api/v1/
      rewrite:
        uri: /api/v1/
      route:
        - destination:
            host: frontend
            port:
              number: 8080
